## Process this file with automake to produce Makefile.in

SUBDIRS	= \
	xstd \
	base \
	xml \
	app \
	beep \
	icp \
	kerberos \
	runtime \
	xparser \
	pgl \
	csm \
	dns \
	cache \
	server \
	client \
	logextractors \
	loganalyzers \
	tools \
	probe \
	monitor

noinst_HEADERS = post-config.h

include $(top_srcdir)/common.am
