
dist_bin_SCRIPTS = \
	beepmon.pl \
	pmix2-ips.pl \
	pmix3-ips.pl \
	webaxe4-ips.pl \
	cmp-lx.pl

dist_man1_MANS = \
	beepmon.man \
	pmix2-ips.man \
	pmix3-ips.man \
	webaxe4-ips.man \
	cmp-lx.man

EXTRA_DIST = \
	beepmon.h2m \
	pmix2-ips.h2m \
	pmix3-ips.h2m \
	webaxe4-ips.h2m \
	cmp-lx.h2m \
	msl_test.c \
	msl_test_bsd.c \
	msl_test_linux.c

include $(top_srcdir)/common.am
