
SUBDIRS = include

workloads_pkgdir = ${pkgdatadir}/workloads

dist_workloads_pkg_DATA = \
	datacomm-1.pg \
	downtime-2.pg \
	nolb-l4-4.pg \
	polyfill-2.pg \
	polymix-1.pg \
	polymix-2.pg \
	polymix-3.pg \
	polymix-4.pg \
	pxylb-4.pg \
	simple.pg \
	srvlb-l4-4.pg \
	srvlb-l7-4.pg \
	test_csm.pg \
	test_polypxy.pg \
	webaxe-1.pg \
	webaxe-3.pg \
	webaxe-4.pg

include $(top_srcdir)/common.am
