ARCHIVE = jquery.jqplot.1.0.0b2_r1012.tar

javascripts_DATA = \
	archive/dist/jquery.jqplot.js \
	archive/dist/jquery.js \
	archive/dist/plugins/jqplot.canvasAxisLabelRenderer.js \
	archive/dist/plugins/jqplot.canvasTextRenderer.js \
	archive/dist/plugins/jqplot.cursor.js \
	archive/dist/plugins/jqplot.enhancedLegendRenderer.js

stylesheets_DATA = \
	archive/dist/jquery.jqplot.css

include $(top_srcdir)/archive.am
include $(top_srcdir)/common.am
