#
# Library of basic components shared by on- and off-line programs
#

noinst_LIBRARIES = \
	libbase.a

libbase_a_SOURCES = \
	AnyToString.h \
	LogObj.h \
	polyLogCats.h \
	polyLogTags.h \
	polygraph.h \
	ForeignTrace.cc \
	ForeignTrace.h \
	AddrParsers.h \
	AddrParsers.cc \
	\
	BStream.h \
	BStream.cc \
	CmdLine.h \
	CmdLine.cc \
	\
	StringRangeBlocks.h \
	StringRangeBlocks.cc \
	StringRange.h \
	StringRange.cc \
	StringArrayBlocks.h \
	StringArrayBlocks.cc \
	StringArray.h \
	StringArray.cc \
	\
	ErrorRec.h \
	ErrorRec.cc \
	ErrorHash.h \
	ErrorHash.cc \
	\
	Histogram.h \
	Histogram.cc \
	\
	AggrStat.h \
	AggrStat.cc \
	LevelStat.h \
	LevelStat.cc \
	HRHistStat.h \
	HRHistStat.cc \
	TmSzHistStat.h \
	TmSzHistStat.cc \
	TmSzStat.h \
	TmSzStat.cc \
	HRStat.h \
	HRStat.cc \
	IcpStat.h \
	IcpStat.cc \
	ConnCloseStat.h \
	ConnCloseStat.cc \
	ContTypeStat.h \
	ContTypeStat.cc \
	ErrorStat.h \
	ErrorStat.cc \
	OidGenStat.h \
	OidGenStat.cc \
	ProtoIntvlStat.h \
	ProtoIntvlStat.cc \
	ProtoStatPtr.h \
	\
	GoalRec.h \
	GoalRec.cc \
	ILog.h \
	ILog.cc \
	ObjTimes.h \
	ObjTimes.cc \
	ObjId.h \
	ObjId.cc \
	OLog.h \
	OLog.cc \
	Opt.h \
	Opt.cc \
	Progress.h \
	Progress.cc \
	\
	RndPermut.h \
	RndPermut.cc \
	TwoWayPermutator.h \
	TwoWayPermutator.cc \
	UniqId.h \
	UniqId.cc \
	\
	StatIntvlRec.h \
	StatIntvlRec.cc \
	StatPhaseRec.h \
	StatPhaseRec.cc \
	\
	histograms.h \
	histograms.cc \
	\
	opts.h \
	opts.cc \
	polyOpts.h \
	polyOpts.cc \
	\
	PatchRegistry.h \
	PatchRegistry.cc \
	PatchRegistrations.h \
	\
	rndDistrStat.h \
	rndDistrStat.cc \
	\
	loadTblDistr.h \
	loadTblDistr.cc \
	polyVersion.h \
	polyVersion.cc \
	\
	RangeGenStat.h \
	RangeGenStat.cc \
	\
	CompoundXactStat.h \
	CompoundXactStat.cc \
	\
	AuthPhaseStat.h \
	AuthPhaseStat.cc \
	AuthStat.h \
	AuthStat.cc \
	\
	StatusCodeStat.h \
	StatusCodeStat.cc \
	\
	IpRange.h \
	IpRange.cc \
	\
	SslPhaseStat.h \
	SslPhaseStat.cc \
	\
	macros.h \
	macros.cc


include $(top_srcdir)/common.am
