#
# dns library (currently used by the client side only)
#

noinst_LIBRARIES = \
	libdns.a

libdns_a_SOURCES = \
	DnsCache.h \
	DnsCache.cc \
	DnsMgr.h \
	DnsMgr.cc \
	DnsMsg.h \
	DnsMsg.cc \
	DnsQuery.h \
	DnsQuery.cc \
	DnsResp.h \
	DnsResp.cc \
	DnsXact.h \
	DnsXact.cc



include $(top_srcdir)/common.am
