#
# Standard Library
#

noinst_LIBRARIES = \
	libpgl.a

libpgl_a_SOURCES = \
	pgl.h \
	\
	PglArraySym.h \
	PglArraySym.cc \
	PglBoolSym.h \
	PglBoolSym.cc \
	PglBwidthSym.h \
	PglBwidthSym.cc \
	PglCodeSym.h \
	PglCodeSym.cc \
	PglClonerSym.h \
	PglClonerSym.cc \
	PglCtx.h \
	PglCtx.cc \
	PglContainerSym.h \
	PglContainerSym.cc \
	PglDistrSym.h \
	PglDistrSym.cc \
	PglExprOper.h \
	PglExprOper.cc \
	PglExprSym.h \
	PglExprSym.cc \
	PglIntSym.h \
	PglIntSym.cc \
	PglKnownNamesSym.h \
	PglKnownNamesSym.cc \
	PglLexer.h \
	PglLexer.cc \
	PglListSym.h \
	PglListSym.cc \
	PglNetAddrParts.h \
	PglNetAddrParts.cc \
	PglNetAddrRange.h \
	PglNetAddrRange.cc \
	PglNetAddrRangeSym.h \
	PglNetAddrRangeSym.cc \
	PglNetAddrSym.h \
	PglNetAddrSym.cc \
	PglNumSym.h \
	PglNumSym.cc \
	PglParser.h \
	PglParser.cc \
	PglPopDistrSym.h \
	PglPopDistrSym.cc \
	PglQualifSym.h \
	PglQualifSym.cc \
	PglRateSym.h \
	PglRateSym.cc \
	PglRecSym.h \
	PglRecSym.cc \
	PglRegExSym.h \
	PglRegExSym.cc \
	PglSizeSym.h \
	PglSizeSym.cc \
	PglStringSym.h \
	PglStringSym.cc \
	PglStringArrayBlockSym.h \
	PglStringArrayBlockSym.cc \
	PglStrBlocks.h \
	PglStrBlocks.cc \
	PglStrRange.h \
	PglStrRange.cc \
	PglStrRangeSym.h \
	PglStrRangeSym.cc \
	PglStrRangeLexer.h \
	PglStrRangeLexer.cc \
	PglTimeSym.h \
	PglTimeSym.cc \
	PglUndefOpExprSym.h \
	PglUndefOpExprSym.cc \
	PglPp.h \
	PglPp.cc \
	PglRec.h \
	PglRec.cc \
	PglSemx.h \
	PglSemx.cc \
	\
	PglStaticSemx.h \
	PglStaticSemx.cc \
	\
	AclSym.h \
	AclSym.cc \
	AgentSymIter.h \
	AgentSymIter.cc \
	AgentAddrIter.h \
	AgentAddrIter.cc \
	AgentSym.h \
	AgentSym.cc \
	BenchSym.h \
	BenchSym.cc \
	BenchSideSym.h \
	BenchSideSym.cc \
	ClientBehaviorSym.h \
	ClientBehaviorSym.cc \
	AddrSchemeSym.h \
	AddrSchemeSym.cc \
	VerThreeAsSym.h \
	VerThreeAsSym.cc \
	PolyMix3AsSym.h \
	PolyMix3AsSym.cc \
	VerFourAsSym.h \
	VerFourAsSym.cc \
	PolyMix4AsSym.h \
	PolyMix4AsSym.cc \
	SrvLb4AsSym.h \
	SrvLb4AsSym.cc \
	WebAxe4AsSym.h \
	WebAxe4AsSym.cc \
	SpreadAsSym.h \
	SpreadAsSym.cc \
	CacheSym.h \
	CacheSym.cc \
	ContentSym.h \
	ContentSym.cc \
	CredentialsGen.h \
	CredentialsGen.cc \
	CredArrSym.h \
	CredArrSym.cc \
	DnsCacheSym.h \
	DnsCacheSym.cc \
	EveryCodeSym.h \
	EveryCodeSym.cc \
	AddrMapSym.h \
	AddrMapSym.cc \
	DnsResolverSym.h \
	DnsResolverSym.cc \
	KerberosWrapSym.h \
	KerberosWrapSym.cc \
	SslWrapSym.h \
	SslWrapSym.cc \
	DumperSym.h \
	DumperSym.cc \
	GoalSym.h \
	GoalSym.cc \
	HostsBasedSym.h \
	HostsBasedSym.cc \
	IpsToNames.h \
	IpsToNames.cc \
	MimeHeaderSym.h \
	MimeHeaderSym.cc \
	MimeSym.h \
	MimeSym.cc \
	NetPipeSym.h \
	NetPipeSym.cc \
	ObjLifeCycleSym.h \
	ObjLifeCycleSym.cc \
	PhaseSym.h \
	PhaseSym.cc \
	ProxySym.h \
	ProxySym.cc \
	StatsSampleCfg.h \
	StatSampleSym.h \
	StatSampleSym.cc \
	StatsSampleSym.h \
	StatsSampleSym.cc \
	PopDistr.h \
	PopModelSym.h \
	PopModelSym.cc \
	RobotSym.h \
	RobotSym.cc \
	RptmstatSym.h \
	RptmstatSym.cc \
	ServerSym.h \
	ServerSym.cc \
	SessionSym.h \
	SessionSym.cc \
	SocketSym.h \
	SocketSym.cc \
	UniqIdSym.h \
	UniqIdSym.cc \
	MembershipMapSym.h \
	MembershipMapSym.cc \
	popDistrs.h \
	popDistrs.cc \
	pglStrIs.h \
	pglStrIs.cc \
	RangeSym.h \
	RangeSym.cc \
	SingleRangeSym.h \
	SingleRangeSym.cc \
	MultiRangeSym.h \
	MultiRangeSym.cc \
	DynamicNameSym.h \
	DynamicNameSym.cc \
	ZoneFile.h \
	ZoneFile.cc


bin_PROGRAMS = \
	pgl-test \
	pgl2eng \
	pgl2acl

dist_man1_MANS = \
	pgl-test.man \
	pgl2eng.man \
	pgl2acl.man

EXTRA_DIST = \
	pgl-test.h2m \
	pgl2eng.h2m

pgl_test_SOURCES = \
	pgl_test.cc

pgl_test_LDADD = \
	libpgl.a \
	\
	../xparser/libxparser.a \
	../base/libbase.a \
	../xstd/libxstd.a


pgl2eng_SOURCES = \
	pgl2eng.cc

pgl2eng_LDADD = \
	libpgl.a \
	\
	../xparser/libxparser.a \
	../xml/libxml.a \
	../base/libbase.a \
	../xstd/libxstd.a


pgl2acl_SOURCES = \
	pgl2acl.cc

pgl2acl_LDADD = \
	libpgl.a \
	\
	../xparser/libxparser.a \
	../base/libbase.a \
	../xstd/libxstd.a


include $(top_srcdir)/common.am
