#
# Objects used by run-time (test-time) programs
#

noinst_LIBRARIES = \
	libruntime.a \
	libagent.a


libruntime_a_SOURCES = \
	ErrorMgr.h \
	ErrorMgr.cc \
	polyErrors.h \
	polyErrors.cc \
	\
	HttpDate.h \
	HttpDate.cc \
	HttpFindCrlf.h \
	HttpFindCrlf.cc \
	HttpCookies.h \
	HttpCookies.cc \
	MimeHeadersCfg.h \
	MimeHeadersCfg.cc \
	HttpPrinter.h \
	HttpPrinter.cc \
	httpHdrs.h \
	httpHdrs.cc \
	httpText.h \
	httpText.cc \
	\
	BcastChannel.h \
	BcastChannel.cc \
	BcastRcver.h \
	BcastRcver.cc \
	polyBcastChannels.h \
	polyBcastChannels.cc \
	\
	MessageSize.h \
	MessageSize.cc \
	IOBuf.h \
	IOBuf.cc \
	LogComment.h \
	LogComment.cc \
	HostMap.h \
	HostMap.cc \
	AddrMap.h \
	AddrMap.cc \
	AddrMapItems.h \
	AddrMapItems.cc \
	AddrSubsts.h \
	AddrSubsts.cc \
	UserCred.h \
	UserCred.cc \
	Viservs.h \
	Viservs.cc \
	\
	SslWrap.h \
	SslWrap.cc \
	SslWraps.h \
	SslWraps.cc \
	\
	NotifMsg.h \
	NotifMsg.cc \
	Notifier.h \
	Notifier.cc \
	\
	PolyOLog.h \
	PolyOLog.cc \
	\
	PortMgr.h \
	PortMgr.cc \
	EphPortMgr.h \
	EphPortMgr.cc \
	ExpPortMgr.h \
	ExpPortMgr.cc \
	\
	Goal.h \
	Goal.cc \
	TransFactor.h \
	TransFactor.cc \
	SharedOpts.h \
	SharedOpts.cc \
	ObjGalaxy.cc \
	ObjGalaxy.h \
	ObjUniverse.cc \
	ObjUniverse.h \
	ObjWorld.h \
	ObjWorld.cc \
	HotSet.h \
	HotSet.cc \
	XactAbortCoord.h \
	XactAbortCoord.cc \
	\
	ConfigSymMgr.h \
	DataFilter.h \
	Farm.h \
	HttpVersion.h \
	MeasRange.h \
	ModuleRegistry.h \
	ObjSelector.h \
	PageInfo.h \
	PageInfo.cc \
	CompoundXactInfo.h \
	CompoundXactInfo.cc \
	SessionWatch.h \
	\
	globals.h \
	globals.cc \
	\
	FtpMsg.h \
	FtpMsg.cc \
	FtpText.h \
	FtpText.cc


libagent_a_SOURCES = \
	Agent.h \
	Agent.cc \
	Xaction.h \
	Xaction.cc \
	IcpXaction.h \
	IcpXaction.cc \
	XactFarm.h \
	\
	Connection.h \
	Connection.cc \
	Socks.h \
	Socks.cc \
	Agent.h \
	Agent.cc \
	AgentCfg.h \
	AgentCfg.cc \
	ConnIdx.h \
	ConnIdx.cc \
	ConnMgr.h \
	ConnMgr.cc \
	\
	ProxyCfg.h \
	ProxyCfg.cc \
	\
	PopModel.h \
	PopModel.cc \
	PersistWorkSetMgr.h \
	PersistWorkSetMgr.cc \
	\
	Script.h \
	Script.cc \
	DutWatchdog.h \
	DutWatchdog.cc \
	Rptmstat.h \
	Rptmstat.cc \
	\
	BcastSender.h \
	BcastSender.cc \
	StatIntvl.h \
	StatIntvl.cc \
	StatCycle.h \
	StatCycle.cc \
	StatPhase.h \
	StatPhase.cc \
	StatPhaseMgr.h \
	StatPhaseMgr.cc \
	StatPhaseSync.h \
	StatPhaseSync.cc \
	StatsSampleMgr.h \
	StatsSampleMgr.cc \
	NtlmAuthState.h


include $(top_srcdir)/common.am
