#
# xml library
#

noinst_LIBRARIES = \
	libxml.a

libxml_a_SOURCES = \
	XmlAttr.h \
	XmlAttr.cc \
	XmlDoc.h \
	XmlDoc.cc \
	XmlNode.h \
	XmlNode.cc \
	XmlTag.h \
	XmlTag.cc \
	XmlText.h \
	XmlText.cc \
	XmlAttrs.h \
	XmlAttrs.cc \
	XmlNodes.h \
	XmlNodes.cc \
	\
	XmlRenderer.h \
	XmlRenderer.cc \
	\
	XmlSearch.h \
	XmlSearch.cc \
	\
	XmlTable.h \
	XmlTable.cc \
	XmlParagraph.h \
	XmlSection.h \
	XmlSection.cc

# TODO: move XmlTable, XmlSection, XmlParagraph into a different lib



include $(top_srcdir)/common.am
